# aoc

./: .gitignore  flake.nix
2023/day01/: justfile
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml  justfile
2023/day06/: Cargo.toml
2023/rest/: Cargo.toml  justfile
2023/rest/src/: lib.rs
