[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.4"
itertools = "0.12.0"
rayon = "1.8.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
